# Kepler-1708b2025

./: README.md  control_script.py
ASCON/: CMakeLists.txt  README.md  benchmark.csv  project.cmake
ASCON/AsconDeployment/: CMakeLists.txt  Main.cpp  README.md
ASCON/AsconDeployment/Top/: AsconDeploymentPackets.xml  AsconDeploymentTopology.cpp  AsconDeploymentTopology.hpp  AsconDeploymentTopologyDefs.hpp  CMakeLists.txt  instances.fpp  topology.fpp
ASCON/Components/: CMakeLists.txt
ASCON/Components/AsconEncryptor/: AsconEncryptor.cpp  AsconEncryptor.fpp  AsconEncryptor.hpp  CMakeLists.txt
ASCON/Components/AsconEncryptor/docs/: sdd.md
ASCON/fprime/Autocoders/Python/src/fprime_ac/generators/templates/: CMakeLists.txt
ASCON/fprime/config/: FpConfig.h
AsconPynq/: AsconEncryptor.cpp  AsconEncryptor.fpp  CMakeLists.txt
AsconPynq/AsconCLibrary/: CMakeLists.txt  crypto_aead.h
Drone Kit/: Key_Exch_UAV.py  Key_Gen.py  chirp_receive.py  dc_rx.py  drone_control.py  log_send.py  pi_4_modelb_code.py  requirements.txt
Tank Kit/: Key_Exch_UGV.py  chirper.py  key_load.py  laptop_code.py  log_receive.py  socket_comms.py
pyascon/: laptop_benchmark_log.csv  laptop_benchmark_log_test.csv  laptop_code.py  pi_4_modelb_code.py  pi_benchmark_log.csv  pi_benchmark_log_test.csv
